--- a/client/src/components/individual/LocationSearchContainer/GoogleMapContainer/GoogleMap/GoogleMap.css
+++ b/client/src/components/individual/LocationSearchContainer/GoogleMapContainer/GoogleMap/GoogleMap.css
@@ -2,6 +2,10 @@
     width: 50%;
     height: 88vh;
     margin: 80px 10px;
+/* 
+    width: 25%;
+    height: 300px;
+    margin-left: 30px; */
 
 }
 
