--- a/client/src/components/shared/LocationDetailsContainer/LocationDetailsMenu/LocationDetailsMenu.css
+++ b/client/src/components/shared/LocationDetailsContainer/LocationDetailsMenu/LocationDetailsMenu.css
@@ -1,10 +1,24 @@
+.location-details-menu__title p:first-child{
+    color: rgb(46, 125, 50);
+    font-size: 26px;
+    font-weight: bold;
+}
+
 .location-details-menu__title {
-    padding: 70px 0px 30px 30px;
-    font-size: 34px;   
+    margin-top: 30px;
+    padding-left: 30px;
+    padding-bottom: 30px;
+    border-bottom: 5px solid #f6f6f6;
 }
 
 .title-no-items {
-    font-size: 24px;
+    font-size: 22px;
     padding-top: 20px;
     font-style: italic;
+}
+
+.location-details-menu__dishes-list .dish-item-price {
+    margin-right: 40px !important;
+    color: rgb(46, 125, 50);
+    font-weight: bold;
 }
