--- a/client/src/components/individual/Authentication/LoginContainer/Login/Login.css
+++ b/client/src/components/individual/Authentication/LoginContainer/Login/Login.css
@@ -31,8 +31,8 @@ html, body {
 	margin-top: 2%;
 }
 .login__form-forgot-password {
-    font-size: 15;
-    margin-top: 2%;
+    font-size: 16px;
+    margin-top: 16px;
     cursor: pointer;
 }
 
@@ -42,8 +42,9 @@ html, body {
 
 .login__redirect-register {
     cursor: pointer;
-    font-size: 22px;
-    margin-top: 1%;
+    font-size: 20px;
+    text-align: center;
+    margin: 6px;
 }
 
 @media only screen and (max-width: 599px) {
