--- a/client/src/components/shared/LocationDetailsContainer/LocationDetailsSimilarLocations/LocationDetailsSimilarLocations.css
+++ b/client/src/components/shared/LocationDetailsContainer/LocationDetailsSimilarLocations/LocationDetailsSimilarLocations.css
@@ -6,10 +6,10 @@
     margin: 30px;
 }
 
-.location-details-similars__grid {
+/* .location-details-similars__grid {
     padding-bottom: 30px;
     padding-left: 30px;
-}
+} */
 
 .location-details-similars .slick-slide {
     height: 350px;
