--- a/client/src/components/individual/GoogleSearchFoodContainer/GoogleSearchFood/GoogleSearchFood.css
+++ b/client/src/components/individual/GoogleSearchFoodContainer/GoogleSearchFood/GoogleSearchFood.css
@@ -32,5 +32,6 @@
 .google-search-food__items-wrapper {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
+    justify-content: center;
+    padding-top: 30px;
 }
