--- a/client/src/components/individual/GoogleSearchFoodContainer/GoogleSearchFood/GoogleSearchFood.css
+++ b/client/src/components/individual/GoogleSearchFoodContainer/GoogleSearchFood/GoogleSearchFood.css
@@ -10,6 +10,9 @@
 	justify-content: center;
 }
 
+.google-search-food__dropzone:first-child {
+    cursor: pointer;
+}
 .google-search-food__list-container {
 	margin-top: 20px;
 
