--- a/client/src/components/individual/Authentication/LoginContainer/Login/Login.css
+++ b/client/src/components/individual/Authentication/LoginContainer/Login/Login.css
@@ -14,12 +14,12 @@ html, body {
 
 .login__form {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     flex-direction: column;
-    height: 100%;
+    height: 80%;
     color: white;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold; 
     /* margin-top: 25px; */ 
 }
