Client - Add some style improvements

--- a/client/src/components/individual/Authentication/RegisterContainer/Register/Register.css
+++ b/client/src/components/individual/Authentication/RegisterContainer/Register/Register.css
@@ -27,6 +27,7 @@
 .register-form-wrapper {
     background-color: rgba(87, 111, 56, 0.8);
     padding: 20px;
+    border-radius: 24px;
 }
 
 .register__form label {
