--- a/client/src/components/shared/LocationDetailsContainer/LocatonDetailsGrid.jsx/LocationDetailsGrid.css
+++ b/client/src/components/shared/LocationDetailsContainer/LocatonDetailsGrid.jsx/LocationDetailsGrid.css
@@ -6,7 +6,8 @@
 .location-details-grid > div {
     margin: 0 auto !important;
     cursor: pointer;
-    /* height: 200px !important; */
+    height: auto !important;
+    width: 600px !important;
 }
 
 .image-full-size {
