--- a/client/src/components/individual/Authentication/LoginContainer/Login/Login.css
+++ b/client/src/components/individual/Authentication/LoginContainer/Login/Login.css
@@ -39,6 +39,15 @@ html, body {
 .login__form-forgot-password-anchor {
     color: white;
 }
+.login-form-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgba(87, 111, 56, 0.8);
+    padding: 20px;
+    border-radius: 24px;
+}
 
 .login__redirect-register {
     cursor: pointer;
