--- a/client/src/components/individual/MyAccountContainer/MyAccount/MyAccount.css
+++ b/client/src/components/individual/MyAccountContainer/MyAccount/MyAccount.css
@@ -1,9 +1,15 @@
 .my-account__wish-list {
-    padding-top: 80px;
+    padding-top: 60px;
+    background-color: #f6f4f4;
 }
 
 .wish-list-title {
     font-size: 34px;
     font-style: italic;
-    padding: 30px;
+    padding: 50px 0px;
+    color: rgb(46, 125, 50);
+    text-align: center;
+    background-color: white;
+    width: 60%;
+    margin: 0 auto;
 }
