--- a/client/src/components/shared/LocationDetailsContainer/LocationDetailsMenu/LocationDetailsMenu.css
+++ b/client/src/components/shared/LocationDetailsContainer/LocationDetailsMenu/LocationDetailsMenu.css
@@ -18,7 +18,14 @@
 }
 
 .location-details-menu__dishes-list .dish-item-price {
-    margin-right: 40px !important;
     color: rgb(46, 125, 50);
     font-weight: bold;
+    width: 48px !important;
+    margin-right: 20px !important;
+    text-align: end !important;
+}
+
+.element-menu-image {
+    height: 36px !important;
+    width: 48px !important;
 }
