--- a/client/src/components/individual/LocationAdministrator/OwnerDashboard/OwnerDashboard.css
+++ b/client/src/components/individual/LocationAdministrator/OwnerDashboard/OwnerDashboard.css
@@ -9,8 +9,12 @@
 }
 
 .location-administrator-wrapper {
+    /* background-color: #f6f4f4; */
     height: 100%;
-    background-color: #f6f4f4;
+}
+
+.location-details-wrapper-administrator .location-details-header__title-container {
+    margin-top: 0px !important;
 }
 
 .choose-location-dropdown {
@@ -47,3 +51,13 @@
 .choose-location-button {
     padding-top: 16px
 }
+
+
+@media only screen and (max-width: 400px) {
+    .choose-location-title {
+        font-size: 18px;
+    }
+    .choose-location-dropdown :first-child {
+        /* width: 250px !important; */
+    }
+  }
