Client - Add css improvements + media queries

--- a/client/src/components/individual/LocationAdministrator/OwnerDashboard/OwnerDashboard.css
+++ b/client/src/components/individual/LocationAdministrator/OwnerDashboard/OwnerDashboard.css
@@ -11,6 +11,7 @@
 .location-administrator-wrapper {
     background-color: #f6f4f4;
     height: 100%;
+    min-height: max-content;
 }
 
 .location-details-administrator-content {
@@ -60,7 +61,7 @@
     .choose-location-title {
         font-size: 18px;
     }
-    .choose-location-dropdown :first-child {
-        /* width: 250px !important; */
+    .choose-location-dropdown > div {
+       width: 260px !important;
     }
   }
