--- a/client/src/components/individual/LocationAdministrator/OwnerLocationInfo/OwnerLocationInfo.css
+++ b/client/src/components/individual/LocationAdministrator/OwnerLocationInfo/OwnerLocationInfo.css
@@ -7,7 +7,7 @@
 }
 
 .location-details-administrator-content {
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
     background-color: white;
 }
@@ -50,4 +50,24 @@
     font-size: 22px;
     padding-top: 20px;
     font-style: italic;
+}
+.owner-location-images-wrapper .location-details-grid img {
+    width: 100%;
+ }
+
+@media all and (max-width: 421px) {
+    .owner-location-images-wrapper .location-details-grid > div {
+        max-width: 300px;
+    }
+    
+}
+
+@media all and (min-width: 421px) and (max-width: 577px) {
+    .owner-location-images-wrapper .location-details-grid > div {
+        max-width: 420px;
+    }
+    
+}
+@media all and (min-width: 577px) and (max-width: 769px) {
+
 }
